--- a/Steludio.dproj
+++ b/Steludio.dproj
@@ -2,7 +2,7 @@
 		<PropertyGroup>
 			<ProjectGuid>{27C8A1EE-4DB8-4875-AF3F-49F37E3E7F59}</ProjectGuid>
 			<MainSource>Steludio.DPR</MainSource>
-			<Config Condition="'$(Config)'==''">Release</Config>
+			<Config Condition="'$(Config)'==''">Debug</Config>
 			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
 			<ProjectVersion>12.0</ProjectVersion>
 		</PropertyGroup>
@@ -66,6 +66,9 @@
 			<DCCReference Include="Edit.pas">
 				<Form>EditForm</Form>
 			</DCCReference>
+			<DCCReference Include="Config.pas">
+				<Form>ConfigForm</Form>
+			</DCCReference>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
@@ -105,7 +108,7 @@ for /f "tokens=2 delims= " %%a in ('git log -1 --abbrev-commit') do (
 						<VersionInfo Name="MajorVer">1</VersionInfo>
 						<VersionInfo Name="MinorVer">0</VersionInfo>
 						<VersionInfo Name="Release">1</VersionInfo>
-						<VersionInfo Name="Build">7</VersionInfo>
+						<VersionInfo Name="Build">18</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
@@ -117,7 +120,7 @@ for /f "tokens=2 delims= " %%a in ('git log -1 --abbrev-commit') do (
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName"/>
 						<VersionInfoKeys Name="FileDescription"/>
-						<VersionInfoKeys Name="FileVersion">1.0.1.7</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.0.1.18</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName"/>
 						<VersionInfoKeys Name="LegalCopyright"/>
 						<VersionInfoKeys Name="LegalTrademarks"/>
